Changelog
=========

4.18-dev - (unreleased)
-----------------------

4.17 - (2012-02-14)
-------------------
 * Bug fix: fixed a problem with broken HTML generated after saving with TinyMCE
   [ghicaale #4945]
 * Upgrade step: under @@manage-viewlets resave position of viewlets in order
   to be saved for EEADesign2006 skin too [ghicaale #4939]
 * Bug fix: patch for plone.app.viewletmanager to save viewlets order for both skins
   [ghicaale #4939]
 * Bug fix: added cache headers to multimedia_popup_view.pt
   [ghicaale #4930]
 * Bug fix: fix clear registry import setup step
   [tiberich #4933]
 * Bug fix: plone4 compatibility, use zope.lifecycleevent in setupmethods used for maintenance
   [demarant]
 * Bug fix: patch cookResources for ResourceRegistries tools to always trigger save resources
   [tiberich #4933]
 * Code cleanup
   [tiberich]

4.16 - (2012-02-06)
-------------------
 * Bug fix: made kukit.js only for authenticated since it gives error on gis apps
   [demarant #4895]
 * Feature: added script to rewrite css/js registry files to enable optimization reordering
   [tiberich #4737]
 * Bug fix: added ordering instructions in css/js registry files
   [tiberich #4737]
 * Upgrade step:
     - export js/css profiles in portal_setup
     - import step EEA Plone Admin: CSS/JS reorder > Clear resource registries (this removes all resources in js/css registries)
     - import step EEA Plone Admin: CSS/JS reorder > Javascript registry + Stylesheets registry 
     - go to portal_javascripts, portal_css, portal_kss, click save

4.15 - (2012-01-17)
-------------------
 * Upgrade step: import javascript and css from "EEAPloneAdmin: CSS/JS reorder" profile
   [tiberich #4737]
 * Bug fix: updated the optimization JS profile file to minimize number of 
   generated files
   [tiberich #4737]

4.14 - (2012-01-04)
-------------------
 * Bug fix: Updated eea rewrite rules JS in order to rewrite some URL as some
   views works only if they are applied to Plone Site