@@ -3,6 +3,8 @@ Changelog
 
 4.18-dev - (unreleased)
 -----------------------
+ * Feature: added external method for deleted old never published objects
+   [demarant]
 
 4.17 - (2012-02-14)
 -------------------
